--- a/app/src/main/res/layout/fragment_music_list.xml
+++ b/app/src/main/res/layout/fragment_music_list.xml
@@ -3,78 +3,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
+    android:background="@color/dark_blue"
     tools:context=".ui.music.MusicListFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_music_list"
+    <RelativeLayout
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/layout_music_player"
-        android:padding="8dp" />
-
-    <LinearLayout
-        android:id="@+id/layout_music_player"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/SlateGray1"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/imageView_album_cover"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/music_icon" />
+            android:id="@+id/iw_music_image_id"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/music_icon"
+            android:layout_centerVertical="true"/>
 
         <TextView
-            android:id="@+id/textView_song_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/song_name"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
+            android:id="@+id/tw_song_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:indeterminate="false"
-            android:padding="8dp" />
+            android:layout_toEndOf="@id/iw_music_image_id"
+            android:layout_marginStart="8dp"
+            android:text="@string/music"
+            android:textColor="@color/white"
+            android:textSize="35sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="16dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/button_previous"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="4dp"
-                android:contentDescription="@string/back_to_previous_song"
-                android:background="@drawable/media_back"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/categories"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-medium"/>
 
-            <ImageButton
-                android:id="@+id/button_play_pause"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="4dp"
-                android:contentDescription="@string/play_pause"
-                android:background="@drawable/media_pause"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rc_categoriesId"
+                android:layout_marginTop="8dp"/>
 
-            <ImageButton
-                android:id="@+id/button_next"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:contentDescription="@string/next_song"
-                android:background="@drawable/media_next"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Artists"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginTop="16dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rc_artistsId"
+                android:layout_marginTop="8dp"/>
 
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
 
