The songs were shown filmed from the firestorm. A difference in design was applied

--- a/app/src/main/res/layout/fragment_music_list.xml
+++ b/app/src/main/res/layout/fragment_music_list.xml
@@ -70,6 +70,23 @@
                 android:id="@+id/rc_artistsId"
                 android:layout_marginTop="8dp"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Songs"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginTop="16dp"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rc_songsId"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"/>
+
+
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
